force-app/main/default/objects/Medicine_c__c/Medicine_c__c.object-meta.xml
<CustomObject>
    <label>Medicine__c</label>
    <nameField>
        <label>Medicine__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medicine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>