force-app/main/default/objects/Medicine_c__c/fields/Medicine_Name__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Name__c</fullName>
    <externalId>true</externalId>
    <label>Medicine Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>