force-app/main/default/objects/Medicine_c__c/fields/Retail_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Retail_Price_Per_Unit__c</fullName>
    <label>Retail Price Per Unit</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>