force-app/main/default/objects/Medicine_c__c/fields/SKU_Number__c.field-meta.xml
<CustomField>
    <fullName>SKU_Number__c</fullName>
    <externalId>true</externalId>
    <label>SKU Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>