force-app/main/default/objects/Medicine_c__c/fields/Unit_Profit_Margin_c__c.field-meta.xml
<CustomField>
    <fullName>Unit_Profit_Margin_c__c</fullName>
    <formula>Retail_Price_Per_Unit__c - Cost_Price_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit_Profit_Margin__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>