force-app/main/default/objects/Medicine_c__c/validationRules/RetailPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>RetailPrice</fullName>
    <active>true</active>
    <errorConditionFormula>Retail_Price_Per_Unit__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Retail_Price_Per_Unit__c</errorDisplayField>
    <errorMessage>&quot;Retail price must be a
positive value.&quot;</errorMessage>
</ValidationRule>